# pydantic_client_example

./: .gitignore  README.md  docker-compose.yaml
common/: setup.py
common/common_models/: models.py
microservices/: generate_client.sh
microservices/personal_page/personal_page_server/: Dockerfile  setup.cfg
microservices/personal_page/personal_page_server/src/openapi_server/: __init__.py
microservices/personal_page/personal_page_server/src/openapi_server/apis/orders/: controllers.py
microservices/personal_page/personal_page_server/src/openapi_server/apis/orders/entities/: add_new_order_request.py  order_info.py  orders_history.py
microservices/personal_page/personal_page_server/src/openapi_server/apis/orders/repositories/: order.py  order_info.py
microservices/personal_page/personal_page_server/src/openapi_server/apis/orders/use_cases/: add_new_order.py  get_all_orders.py
microservices/petstore/: config_client_httpx.yaml  generate_client.sh  generate_server.sh
microservices/petstore/client-python-httpx/petstore_httpx_client/: MANIFEST.in  README.md  setup.py  tox.ini
microservices/petstore/client-python-httpx/petstore_httpx_client/petstore_httpx_client/: __init__.py  api_client.py  models.py
microservices/petstore/petstore_server/: Dockerfile  README.md  openapi.yaml  setup.cfg
microservices/petstore/petstore_server/.openapi-generator/: FILES
microservices/petstore/petstore_server/tests/: test_pet_api.py  test_store_api.py  test_user_api.py
sample_client/: Dockerfile  request_personal_page.sh
(+8 files in other folders)
